Add javaFX dependancy